# mpu6050-gps

./: .gitignore  .mxproject  CMakeLists.txt  README.md  compile_commands.json  project1_stm32.ioc
Application/: CMakeLists.txt
Application/Inc/: app.hpp  communication.hpp  task_heart.hpp  tim6_get.hpp  uart_cb.hpp
Application/Src/: app.cpp  communication.cpp  tim6_get.cpp  uart_cb.cpp
Core/Inc/: stm32f1xx_it.h  usart.h
Core/Src/: gpio.c  iwdg.c  main.c  stm32f1xx_it.c  tim.c  usart.c
Devices/: CMakeLists.txt
Devices/Inc/: gps.hpp  led.hpp  mpu6050.hpp  oled_096.hpp  servo_SG90.hpp
Devices/Src/: gps.cpp  led.cpp  mpu6050.cpp  oled_096.cpp  servo_SG90.cpp
Lib/CMSIS-DSP/: CMakeLists.txt
Lib/ETL/: CMakeLists.txt
MiddleWare/FreeRTOS/: CMakeLists.txt
MiddleWare/FreeRTOS/Inc/FreeRTOS/: FreeRTOSConfig.h
Soft_Drivers/: CMakeLists.txt
Soft_Drivers/Inc/: my_i2c.hpp  my_pwm.hpp
Soft_Drivers/Src/: my_i2c.cpp  my_pwm.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
